--- a/html/ex-win-r15_2.html
+++ b/html/ex-win-r15_2.html
@@ -77,12 +77,6 @@
                             <a href="../html/lienhe.html" style="color: black;">Liên hệ</a>
                         </div>
                     </li>
-                    <!-- <li class="link-item">
-                        <a href="" class="link">Sản phẩm</a>
-                        <div class="overlay">
-                            <a href="" style="color: black;">Sản phẩm</a>
-                        </div>
-                    </li> -->
                 </ul>
             </div>
             <div class="nav-items">
@@ -496,13 +490,17 @@
                         <div class="col-lg-12">
                             <input type="email" name="" id="txtEmailDN" class="form-control"
                                 placeholder="Nhập email">            
-                        </div>
+                                <span id="errEmailDN">*</span>          
+                        
+                            </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
                             <input type="password" name="" id="txtPassDN" class="form-control"
                                 placeholder="Nhập mật khẩu">
-                        </div>
+                                <span id="errPassDN">*</span>
+                        
+                            </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12 nut-signin">
