--- a/html/chitietsanpham.html
+++ b/html/chitietsanpham.html
@@ -392,12 +392,16 @@
                                 <div class="col-lg-12">
                                     <input type="email" name="" id="txtEmailDN" class="form-control"
                                         placeholder="Nhập email">
+                                        <span id="errEmailDN">*</span>          
+
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
                                     <input type="password" name="" id="txtPassDN" class="form-control"
                                         placeholder="Nhập mật khẩu">
+                                        <span id="errPassDN">*</span>
+
                                 </div>
                             </div>
                             <div class="row">
