--- a/html/ex-win-r15_1.html
+++ b/html/ex-win-r15_1.html
@@ -543,13 +543,17 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <input type="email" name="" id="txtEmailDN" class="form-control"
-                                placeholder="Nhập email">            
+                                placeholder="Nhập email">      
+                                <span id="errEmailDN">*</span>          
+
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
                             <input type="password" name="" id="txtPassDN" class="form-control"
                                 placeholder="Nhập mật khẩu">
+                                <span id="errPassDN">*</span>
+
                         </div>
                     </div>
                     <div class="row">
