--- a/html/xemay_2.html
+++ b/html/xemay_2.html
@@ -470,13 +470,15 @@
                         <div class="col-lg-12">
                             <input type="email" name="" id="txtEmailDN" class="form-control"
                                 placeholder="Nhập email">            
-                        </div>
+                            <span id="errEmailDN">*</span> 
+                            </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
                             <input type="password" name="" id="txtPassDN" class="form-control"
                                 placeholder="Nhập mật khẩu">
-                        </div>
+                        <span id="errPassDN">*</span>
+                            </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12 nut-signin">
